changed proj 1 image

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     
     <div id="contact" class="contact">
         <div class="header">
-            <h1>PoC projects for showing DecOps pipelines</h1>
+            <h1>PoC projects for showing DevOps pipelines</h1>
             <p>What will you automate today?</p>
         </div>
         <a href="" target="_blank" class="contact-details">Facebook</a>
