--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav>
         <ul id='navbar'>
             <li><a href="#welcome-section">About</a></li>
-            <li><a href="#projects">Work</a></li>
+            <li><a href="#projects">Projects</a></li>
             
         </ul>
     </nav>
